--- a/parts/partexplorer/partexplorerformbase.ui
+++ b/parts/partexplorer/partexplorerformbase.ui
@@ -27,12 +27,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>6</number>
-        </property>
-        <property name="spacing">
-            <number>3</number>
-        </property>
+
         <widget class="QGroupBox">
             <property name="name">
                 <cstring>groupBox1</cstring>
@@ -208,7 +203,11 @@
     <tabstop>listViewResults</tabstop>
     <tabstop>buttonClose</tabstop>
 </tabstops>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
     <includehint>qwidget.h</includehint>
     <includehint>klistview.h</includehint>
