--- a/parts/sqlsupport/sqlconfigwidget.ui
+++ b/parts/sqlsupport/sqlconfigwidget.ui
@@ -183,7 +183,11 @@
     <slot>setProjectDom( QDomDocument * doc )</slot>
     <slot>loadConfig()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
     <includehint>kpushbutton.h</includehint>
     <includehint>kpushbutton.h</includehint>
