--- a/lib/project/environmentvariableswidgetbase.ui
+++ b/lib/project/environmentvariableswidgetbase.ui
@@ -132,5 +132,9 @@
     <slot>addVarClicked()</slot>
     <slot>removeVarClicked()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
