--- a/lib/project/makeoptionswidgetbase.ui
+++ b/lib/project/makeoptionswidgetbase.ui
@@ -85,5 +85,9 @@
         </widget>
     </grid>
 </widget>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
