--- a/lib/project/subclassesdlgbase.ui
+++ b/lib/project/subclassesdlgbase.ui
@@ -238,7 +238,11 @@
     <slot access="protected">newRelation()</slot>
     <slot access="protected">currentRelationChanged(QListBoxItem *item)</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
     <includehint>kurlrequester.h</includehint>
 </includehints>
