--- a/parts/abbrev/addtemplatedlgbase.ui
+++ b/parts/abbrev/addtemplatedlgbase.ui
@@ -22,12 +22,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QLayoutWidget" row="4" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>Layout1</cstring>
@@ -39,9 +34,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <spacer>
                     <property name="name" stdset="0">
                         <cstring>Horizontal Spacing2</cstring>
@@ -158,5 +151,9 @@
         <slot>reject()</slot>
     </connection>
 </connections>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
