--- a/parts/adasupport/addclassdlg.ui
+++ b/parts/adasupport/addclassdlg.ui
@@ -19,12 +19,6 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
         <widget class="KEditListBox" row="1" column="0" rowspan="1" colspan="4">
             <property name="name">
                 <cstring>Implements</cstring>
@@ -47,12 +41,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="KComboBox" row="2" column="1" rowspan="1" colspan="5">
                     <property name="name">
                         <cstring>Extends</cstring>
@@ -119,9 +108,7 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-                        <property name="spacing">
-                            <number>6</number>
-                        </property>
+
                         <widget class="QRadioButton">
                             <property name="name">
                                 <cstring>Public</cstring>
@@ -231,12 +218,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QCheckBox">
                     <property name="name">
                         <cstring>Constructor</cstring>
@@ -269,12 +251,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QLabel" row="1" column="0">
                     <property name="name">
                         <cstring>TextLabel5</cstring>
@@ -450,6 +427,8 @@
     <include location="global" impldecl="in implementation">keditlistbox.h</include>
     <include location="global" impldecl="in implementation">kcombobox.h</include>
     <include location="global" impldecl="in implementation">klineedit.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
