--- a/parts/antproject/antoptionswidget.ui
+++ b/parts/antproject/antoptionswidget.ui
@@ -19,12 +19,6 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
         <widget class="KComboBox" row="1" column="1">
             <item>
                 <property name="text">
@@ -126,9 +120,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="KLineEdit">
                     <property name="name">
                         <cstring>BuildXML</cstring>
@@ -197,6 +189,8 @@
 <include location="global" impldecl="in implementation">kcombobox.h</include>
 <include location="global" impldecl="in implementation">klineedit.h</include>
 <include location="global" impldecl="in implementation">kpushbutton.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
