--- a/parts/antproject/classpathwidget.ui
+++ b/parts/antproject/classpathwidget.ui
@@ -19,12 +19,6 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
         <widget class="KEditListBox">
             <property name="name">
                 <cstring>ClassPath</cstring>
@@ -38,5 +32,9 @@
 <includes>
     <include location="global" impldecl="in implementation">keditlistbox.h</include>
 </includes>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
