--- a/parts/appwizard/appwizarddlgbase.ui
+++ b/parts/appwizard/appwizarddlgbase.ui
@@ -26,12 +26,7 @@
             <property name="name">
                 <cstring>unnamed</cstring>
             </property>
-            <property name="margin">
-                <number>11</number>
-            </property>
-            <property name="spacing">
-                <number>6</number>
-            </property>
+
             <widget class="QListView" row="0" column="0" rowspan="2" colspan="1">
                 <column>
                     <property name="text">
@@ -152,12 +147,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QLabel" row="1" column="0">
                         <property name="name">
                             <cstring>location_label</cstring>
@@ -410,5 +400,9 @@
     <slot access="protected">templatesTreeViewClicked( QListViewItem * )</slot>
     <slot access="protected">textChanged()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
