--- a/parts/appwizard/importdlgbase.ui
+++ b/parts/appwizard/importdlgbase.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QLabel" row="2" column="0">
             <property name="name">
                 <cstring>project_label</cstring>
@@ -142,9 +137,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <spacer>
                     <property name="name">
                         <cstring>Spacer3</cstring>
@@ -288,5 +281,9 @@
     <slot access="protected">dirButtonClicked()</slot>
     <slot>dirChanged()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
