--- a/parts/appwizard/qtopiaapp/examplebase.ui
+++ b/parts/appwizard/qtopiaapp/examplebase.ui
@@ -20,14 +20,7 @@
         <string>$APPNAME$</string>
     </property>
     <vbox>
-        <property stdset="1">
-            <name>margin</name>
-            <number>11</number>
-        </property>
-        <property stdset="1">
-            <name>spacing</name>
-            <number>6</number>
-        </property>
+
         <widget>
             <class>QLabel</class>
             <property stdset="1">
@@ -52,4 +45,9 @@
         </widget>
     </vbox>
 </widget>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
