--- a/parts/astyle/astyleconfig.ui
+++ b/parts/astyle/astyleconfig.ui
@@ -15,8 +15,6 @@
     <property name="caption">
         <string>Artistic Style Configuration</string>
     </property>
-    <property name="layoutMargin" stdset="0">
-    </property>
     <grid>
         <property name="name">
             <cstring>unnamed</cstring>
@@ -24,9 +22,7 @@
         <property name="margin">
             <number>0</number>
         </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QTabWidget" row="0" column="0">
             <property name="name">
                 <cstring>ConfigTabs</cstring>
@@ -42,12 +38,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <spacer row="1" column="0">
                         <property name="name">
                             <cstring>Spacer1</cstring>
@@ -70,12 +61,7 @@
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QRadioButton" row="1" column="0">
                                 <property name="name">
                                     <cstring>Style_ANSI</cstring>
@@ -169,12 +155,7 @@
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QMultiLineEdit" row="0" column="0">
                                 <property name="name">
                                     <cstring>StyleExample</cstring>
@@ -469,12 +450,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QGroupBox" row="1" column="0" rowspan="1" colspan="2">
                         <property name="name">
                             <cstring>GroupBox1</cstring>
@@ -486,12 +462,7 @@
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QCheckBox">
                                 <property name="name">
                                     <cstring>Indent_Switches</cstring>
@@ -559,12 +530,7 @@
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QRadioButton" row="1" column="0">
                                 <property name="name">
                                     <cstring>Fill_Spaces</cstring>
@@ -611,12 +577,7 @@
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QSpinBox" row="0" column="1">
                                 <property name="name">
                                     <cstring>Continue_MaxStatement</cstring>
@@ -670,12 +631,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QButtonGroup">
                         <property name="name">
                             <cstring>ButtonGroup9</cstring>
@@ -687,12 +643,7 @@
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QRadioButton">
                                 <property name="name">
                                     <cstring>Brackets_Break</cstring>
@@ -733,12 +684,7 @@
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QCheckBox">
                                 <property name="name">
                                     <cstring>Pad_Parentheses</cstring>
@@ -768,12 +714,7 @@
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QCheckBox">
                                 <property name="name">
                                     <cstring>Keep_Statements</cstring>
@@ -816,5 +757,9 @@
         <slot>setEnabled(bool)</slot>
     </connection>
 </connections>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
