--- a/parts/autoproject/addfiledlgbase.ui
+++ b/parts/autoproject/addfiledlgbase.ui
@@ -56,12 +56,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QLayoutWidget">
                     <property name="name">
                         <cstring>targetLayout</cstring>
@@ -73,9 +68,7 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-                        <property name="spacing">
-                            <number>6</number>
-                        </property>
+
                         <widget class="KSqueezedTextLabel" row="0" column="1">
                             <property name="name">
                                 <cstring>directoryLabel</cstring>
@@ -147,12 +140,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="KLineEdit" row="1" column="0">
                     <property name="name">
                         <cstring>fileEdit</cstring>
@@ -242,9 +230,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <spacer>
                     <property name="name">
                         <cstring>buttonSpacer</cstring>
@@ -288,8 +274,11 @@
 <includes>
     <include location="global" impldecl="in implementation">ksqueezedtextlabel.h</include>
     <include location="global" impldecl="in implementation">klineedit.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+
 <includehints>
     <includehint>ksqueezedtextlabel.h</includehint>
     <includehint>klineedit.h</includehint>
