--- a/parts/autoproject/addsubprojectdlgbase.ui
+++ b/parts/autoproject/addsubprojectdlgbase.ui
@@ -39,12 +39,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QGroupBox">
             <property name="name">
                 <cstring>fileGroupBox</cstring>
@@ -56,12 +51,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QLayoutWidget">
                     <property name="name">
                         <cstring>Layout3</cstring>
@@ -73,9 +63,7 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-                        <property name="spacing">
-                            <number>6</number>
-                        </property>
+
                         <widget class="QLabel">
                             <property name="name">
                                 <cstring>spStaticLabel</cstring>
@@ -156,9 +144,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <spacer>
                     <property name="name">
                         <cstring>buttonSpacer</cstring>
@@ -206,8 +192,11 @@
 </tabstops>
 <includes>
     <include location="global" impldecl="in implementation">klineedit.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+
 <includehints>
     <includehint>klineedit.h</includehint>
 </includehints>
