--- a/parts/autoproject/addtargetdlgbase.ui
+++ b/parts/autoproject/addtargetdlgbase.ui
@@ -22,12 +22,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QGroupBox">
             <property name="name">
                 <cstring>groupBox2</cstring>
@@ -179,12 +174,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QCheckBox">
                     <property name="name">
                         <cstring>allstatic_box</cstring>
@@ -228,9 +218,7 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-                        <property name="spacing">
-                            <number>6</number>
-                        </property>
+
                         <widget class="QLabel">
                             <property name="name">
                                 <cstring>ldflagsother_label</cstring>
@@ -263,9 +251,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <spacer>
                     <property name="name">
                         <cstring>Horizontal Spacing2</cstring>
@@ -352,8 +338,12 @@
 <slots>
     <slot access="protected">primaryChanged()</slot>
 </slots>
-<layoutdefaults spacing="6" margin="11"/>
 <includehints>
     <includehint>ksqueezedtextlabel.h</includehint>
 </includehints>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
