--- a/parts/autoproject/configureoptionswidgetbase.ui
+++ b/parts/autoproject/configureoptionswidgetbase.ui
@@ -22,9 +22,7 @@
         <property name="margin">
             <number>0</number>
         </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QLayoutWidget">
             <property name="name">
                 <cstring>Layout1</cstring>
@@ -33,12 +31,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QLabel">
                     <property name="name">
                         <cstring>config_label</cstring>
@@ -539,12 +532,7 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QLabel" row="0" column="0">
                         <property name="name">
                             <cstring>cxxcompiler_label</cstring>
@@ -670,12 +658,7 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QLabel" row="0" column="0">
                         <property name="name">
                             <cstring>f77compiler_label</cstring>
@@ -973,5 +956,10 @@ headers in a nonstandard directory &lt;include dir&gt;</string>
     <slot access="protected">setDirty()</slot>
     <slot access="protected">topsourcedirClicked()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+
 </UI>
