--- a/parts/autoproject/removefiledlgbase.ui
+++ b/parts/autoproject/removefiledlgbase.ui
@@ -82,12 +82,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QLayoutWidget">
                     <property name="name">
                         <cstring>fileLayout</cstring>
@@ -143,12 +138,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QLabel" row="1" column="1">
                     <property name="name">
                         <cstring>targetLabel</cstring>
@@ -227,6 +217,8 @@
 </widget>
 <includes>
     <include location="global" impldecl="in implementation">ksqueezedtextlabel.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
