--- a/parts/autoproject/removetargetdlgbase.ui
+++ b/parts/autoproject/removetargetdlgbase.ui
@@ -30,12 +30,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QLayoutWidget">
                     <property name="name">
                         <cstring>targetLayout</cstring>
@@ -47,9 +42,7 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-                        <property name="spacing">
-                            <number>6</number>
-                        </property>
+
                         <widget class="KSqueezedTextLabel" row="0" column="1">
                             <property name="name">
                                 <cstring>directoryLabel</cstring>
@@ -132,12 +125,6 @@
             <vbox>
                 <property name="name">
                     <cstring>unnamed</cstring>
-                </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
                 </property>
                 <widget class="QLabel">
                     <property name="name">
@@ -225,9 +212,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <spacer>
                     <property name="name">
                         <cstring>buttonSpacer</cstring>
@@ -268,7 +253,12 @@
         </widget>
     </vbox>
 </widget>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+
 <includehints>
     <includehint>ksqueezedtextlabel.h</includehint>
     <includehint>klistbox.h</includehint>
