--- a/parts/autoproject/subprojectoptionsdlgbase.ui
+++ b/parts/autoproject/subprojectoptionsdlgbase.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QTabWidget">
             <property name="name">
                 <cstring>subprojectoptions_tabwidget</cstring>
@@ -40,12 +35,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QLabel">
                         <property name="name">
                             <cstring>cflags_label</cstring>
@@ -72,9 +62,7 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QLineEdit">
                                 <property name="name">
                                     <cstring>cflags_edit</cstring>
@@ -158,9 +146,7 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QLineEdit">
                                 <property name="name">
                                     <cstring>cxxflags_edit</cstring>
@@ -236,9 +222,7 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QLineEdit">
                                 <property name="name">
                                     <cstring>fflags_edit</cstring>
@@ -301,12 +285,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QListView" row="1" column="0">
                         <column>
                             <property name="text">
@@ -386,9 +365,7 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <spacer>
                                 <property name="name">
                                     <cstring>Spacer1_2</cstring>
@@ -467,9 +444,6 @@
                             </property>
                             <property name="margin">
                                 <number>0</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
                             </property>
                             <spacer>
                                 <property name="name">
@@ -553,12 +527,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QListView" row="1" column="0">
                         <column>
                             <property name="text">
@@ -615,9 +584,7 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <spacer>
                                 <property name="name">
                                     <cstring>Spacer5</cstring>
@@ -683,12 +650,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QLayoutWidget" row="1" column="1">
                         <property name="name">
                             <cstring>Layout9_2</cstring>
@@ -700,9 +662,7 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <spacer>
                                 <property name="name">
                                     <cstring>Spacer2_3_2</cstring>
@@ -800,9 +760,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <spacer>
                     <property name="name">
                         <cstring>Spacer1</cstring>
@@ -969,5 +927,9 @@
     <slot access="protected">removePrefixClicked()</slot>
     <slot access="private">addPrefixClicked()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
