--- a/parts/closer/closer_dialog.ui
+++ b/parts/closer/closer_dialog.ui
@@ -113,5 +113,9 @@
         <slot>reject()</slot>
     </connection>
 </connections>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
