--- a/parts/cppsupport/addattributedialogbase.ui
+++ b/parts/cppsupport/addattributedialogbase.ui
@@ -395,5 +395,9 @@
     <slot>currentChanged(QListViewItem*)</slot>
     <slot>updateGUI()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
