--- a/parts/cppsupport/ccconfigwidgetbase.ui
+++ b/parts/cppsupport/ccconfigwidgetbase.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QTabWidget">
             <property name="name">
                 <cstring>codecompletion_tab</cstring>
@@ -40,12 +35,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QGroupBox">
                         <property name="name">
                             <cstring>GroupBox4</cstring>
@@ -63,12 +53,7 @@
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QCheckBox">
                                 <property name="name">
                                     <cstring>cbEnablePCS</cstring>
@@ -143,12 +128,7 @@
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QCheckBox">
                                 <property name="name">
                                     <cstring>cbEnablePP</cstring>
@@ -226,9 +206,7 @@
                                     <property name="margin">
                                         <number>0</number>
                                     </property>
-                                    <property name="spacing">
-                                        <number>6</number>
-                                    </property>
+
                                     <spacer>
                                         <property name="name">
                                             <cstring>Spacer68</cstring>
@@ -313,12 +291,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <spacer>
                         <property name="name">
                             <cstring>Spacer72_2</cstring>
@@ -355,12 +328,7 @@
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QCheckBox" row="0" column="0" rowspan="1" colspan="2">
                                 <property name="name">
                                     <cstring>cbEnableCH</cstring>
@@ -388,12 +356,7 @@
                                     <property name="name">
                                         <cstring>unnamed</cstring>
                                     </property>
-                                    <property name="margin">
-                                        <number>11</number>
-                                    </property>
-                                    <property name="spacing">
-                                        <number>6</number>
-                                    </property>
+
                                     <widget class="QRadioButton">
                                         <property name="name">
                                             <cstring>rbOutputView</cstring>
@@ -481,12 +444,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QLayoutWidget">
                         <property name="name">
                             <cstring>Layout8</cstring>
@@ -498,9 +456,7 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QGroupBox">
                                 <property name="name">
                                     <cstring>files</cstring>
@@ -520,12 +476,7 @@
                                     <property name="name">
                                         <cstring>unnamed</cstring>
                                     </property>
-                                    <property name="margin">
-                                        <number>11</number>
-                                    </property>
-                                    <property name="spacing">
-                                        <number>6</number>
-                                    </property>
+
                                     <widget class="QComboBox">
                                         <property name="name">
                                             <cstring>template_groups</cstring>
@@ -566,12 +517,7 @@
                                     <property name="name">
                                         <cstring>unnamed</cstring>
                                     </property>
-                                    <property name="margin">
-                                        <number>11</number>
-                                    </property>
-                                    <property name="spacing">
-                                        <number>6</number>
-                                    </property>
+
                                     <widget class="QLineEdit" row="0" column="1">
                                         <property name="name">
                                             <cstring>interface_suffix</cstring>
@@ -625,12 +571,7 @@
                                 <property name="name">
                                     <cstring>unnamed</cstring>
                                 </property>
-                                <property name="margin">
-                                    <number>11</number>
-                                </property>
-                                <property name="spacing">
-                                    <number>6</number>
-                                </property>
+
                                 <widget class="QLayoutWidget">
                                     <property name="name">
                                         <cstring>Layout7</cstring>
@@ -642,9 +583,7 @@
                                         <property name="margin">
                                             <number>0</number>
                                         </property>
-                                        <property name="spacing">
-                                            <number>6</number>
-                                        </property>
+
                                         <widget class="QLabel">
                                             <property name="name">
                                                 <cstring>TextLabel1</cstring>
@@ -951,12 +890,7 @@
                                 <property name="name">
                                     <cstring>unnamed</cstring>
                                 </property>
-                                <property name="margin">
-                                    <number>11</number>
-                                </property>
-                                <property name="spacing">
-                                    <number>6</number>
-                                </property>
+
                                 <widget class="QLayoutWidget">
                                     <property name="name">
                                         <cstring>Layout6</cstring>
@@ -968,9 +902,7 @@
                                         <property name="margin">
                                             <number>0</number>
                                         </property>
-                                        <property name="spacing">
-                                            <number>6</number>
-                                        </property>
+
                                         <widget class="QLabel">
                                             <property name="name">
                                                 <cstring>TextLabel1_2</cstring>
@@ -1362,9 +1294,7 @@
     <tabstop>implementation_url</tabstop>
     <tabstop>implementation_file</tabstop>
 </tabstops>
-<includes>
-    <include location="global" impldecl="in implementation">kurlrequester.h</include>
-</includes>
+
 <slots>
     <slot access="protected">implementationFile()</slot>
     <slot access="protected">interfaceFile()</slot>
@@ -1378,7 +1308,12 @@
     <slot access="protected">slotSelectTemplateGroup( const QString &amp; )</slot>
     <slot access="protected">slotSetCHWindow( )</slot>
 </slots>
+<includes>
+<include location="global" impldecl="in implementation">kurlrequester.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
     <includehint>kurlrequester.h</includehint>
     <includehint>klineedit.h</includehint>
