--- a/parts/cppsupport/subclassingdlgbase.ui
+++ b/parts/cppsupport/subclassingdlgbase.ui
@@ -224,5 +224,9 @@
 <slots>
     <slot>onChangedClassName()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
