--- a/parts/cvs/cvsform.ui
+++ b/parts/cvs/cvsform.ui
@@ -24,12 +24,7 @@ for your new project</string>
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QLabel" row="6" column="0">
             <property name="name">
                 <cstring>TextLabel5</cstring>
@@ -188,10 +183,13 @@ e.g. &lt;tt&gt;/home/cvsroot&lt;/tt&gt; or &lt;tt&gt;:pserver:me@localhost:/home
 </tabstops>
 <includes>
     <include location="local" impldecl="in implementation">cvsform.ui.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <slots>
     <slot>init()</slot>
     <slot>destroy()</slot>
 </slots>
-<layoutdefaults spacing="6" margin="11"/>
+
 </UI>
