--- a/parts/cvs/logform.ui
+++ b/parts/cvs/logform.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QTextBrowser">
             <property name="name">
                 <cstring>contents</cstring>
@@ -37,7 +32,10 @@
 </widget>
 <includes>
     <include location="local" impldecl="in implementation">logform.ui.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <forwards>
     <forward>class QProcess;</forward>
 </forwards>
@@ -56,5 +54,4 @@
     <slot>linkClicked( const QString &amp; link )</slot>
 </slots>
 <pixmapinproject/>
-<layoutdefaults spacing="6" margin="11"/>
 </UI>
