--- a/parts/debugger/debuggerconfigwidgetbase.ui
+++ b/parts/debugger/debuggerconfigwidgetbase.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QCheckBox" row="9" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>runAppInAppDirectory_box</cstring>
@@ -184,5 +179,9 @@ If you are not "dlopen"ing libs then leave this unchecked.</string>
         </spacer>
     </grid>
 </widget>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
