--- a/parts/doctreeview/doctreeglobalconfigwidgetbase.ui
+++ b/parts/doctreeview/doctreeglobalconfigwidgetbase.ui
@@ -372,9 +372,7 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <spacer>
                                 <property name="name">
                                     <cstring>Spacer7</cstring>
@@ -1071,7 +1069,6 @@
     <slot access="protected">dhAddButton_clicked()</slot>
     <slot access="protected">dhScanButton_clicked()</slot>
 </slots>
-<layoutdefaults spacing="6" margin="11"/>
 <includehints>
     <includehint>klistview.h</includehint>
     <includehint>klistview.h</includehint>
@@ -1085,4 +1082,10 @@
     <includehint>klistview.h</includehint>
     <includehint>kurllabel.h</includehint>
 </includehints>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+
 </UI>
