--- a/parts/doctreeview/librarydocdlgbase.ui
+++ b/parts/doctreeview/librarydocdlgbase.ui
@@ -249,7 +249,11 @@
 <includes>
     <include location="global" impldecl="in implementation">klineedit.h</include>
     <include location="global" impldecl="in implementation">kurlrequester.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+
 <slots>
     <slot specifier="pure virtual">slotDefault()</slot>
 </slots>
@@ -257,7 +261,6 @@
     <function returnType="QString">url()</function>
     <function returnType="QString">path()</function>
 </functions>
-<layoutdefaults spacing="6" margin="11"/>
 <includehints>
     <includehint>klineedit.h</includehint>
     <includehint>kurlrequester.h</includehint>
