--- a/parts/editor-chooser/editchooser.ui
+++ b/parts/editor-chooser/editchooser.ui
@@ -20,14 +20,7 @@
         <string>Form1</string>
     </property>
     <vbox>
-        <property stdset="1">
-            <name>margin</name>
-            <number>11</number>
-        </property>
-        <property stdset="1">
-            <name>spacing</name>
-            <number>6</number>
-        </property>
+
         <widget>
             <class>QGroupBox</class>
             <property stdset="1">
@@ -39,14 +32,7 @@
                 <string>&amp;Embedded Editor</string>
             </property>
             <grid>
-                <property stdset="1">
-                    <name>margin</name>
-                    <number>11</number>
-                </property>
-                <property stdset="1">
-                    <name>spacing</name>
-                    <number>6</number>
-                </property>
+
                 <widget row="0"  column="0" >
                     <class>QComboBox</class>
                     <property stdset="1">
@@ -91,4 +77,9 @@ already open files.</string>
         </spacer>
     </vbox>
 </widget>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
