--- a/parts/filecreate/fctemplateeditbase.ui
+++ b/parts/filecreate/fctemplateeditbase.ui
@@ -178,11 +178,14 @@
 </tabstops>
 <includes>
     <include location="local" impldecl="in implementation">fctemplateeditbase.ui.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <slots>
     <slot>init()</slot>
 </slots>
-<layoutdefaults spacing="6" margin="11"/>
+
 <includehints>
     <includehint>kurlrequester.h</includehint>
     <includehint>klineedit.h</includehint>
