--- a/parts/filecreate/fctypeeditbase.ui
+++ b/parts/filecreate/fctypeeditbase.ui
@@ -300,11 +300,14 @@
 <includes>
     <include location="local" impldecl="in implementation">kicondialog.h</include>
     <include location="local" impldecl="in implementation">fctypeeditbase.ui.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <slots>
     <slot>init()</slot>
 </slots>
-<layoutdefaults spacing="6" margin="11"/>
+
 <includehints>
     <includehint>kiconbutton.h</includehint>
     <includehint>kurlrequester.h</includehint>
