--- a/parts/fortransupport/ftnchekconfigwidgetbase.ui
+++ b/parts/fortransupport/ftnchekconfigwidgetbase.ui
@@ -15,10 +15,7 @@
     <property name="caption">
         <string>Ftncheck Options</string>
     </property>
-    <property name="layoutMargin" stdset="0">
-    </property>
-    <property name="layoutSpacing" stdset="0">
-    </property>
+
     <vbox>
         <property name="name">
             <cstring>unnamed</cstring>
@@ -44,12 +41,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QCheckBox" row="0" column="2">
                         <property name="name">
                             <cstring>extern_box</cstring>
@@ -241,12 +233,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QRadioButton" row="2" column="0">
                         <property name="name">
                             <cstring>truncationonly_button</cstring>
@@ -369,12 +356,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QRadioButton" row="1" column="0" rowspan="1" colspan="2">
                         <property name="name">
                             <cstring>f77all_button</cstring>
@@ -489,5 +471,9 @@
         </widget>
     </vbox>
 </widget>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
