--- a/parts/javasupport/addattributedialogbase.ui
+++ b/parts/javasupport/addattributedialogbase.ui
@@ -244,9 +244,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QPushButton">
                     <property name="name">
                         <cstring>buttonHelp</cstring>
@@ -395,5 +393,9 @@
     <slot>currentChanged(QListViewItem*)</slot>
     <slot>updateGUI()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
