--- a/parts/javasupport/addmethoddialogbase.ui
+++ b/parts/javasupport/addmethoddialogbase.ui
@@ -335,9 +335,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QPushButton">
                     <property name="name">
                         <cstring>buttonHelp</cstring>
@@ -512,5 +510,9 @@
     <slot>updateGUI()</slot>
     <slot>browseImplementationFile()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
