--- a/parts/javasupport/classgeneratorconfigbase.ui
+++ b/parts/javasupport/classgeneratorconfigbase.ui
@@ -247,5 +247,9 @@
 <slots>
     <slot access="protected">templateTypeChanged(int type)</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
