--- a/parts/javasupport/implementmethodsdialog.ui
+++ b/parts/javasupport/implementmethodsdialog.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QLabel">
             <property name="name">
                 <cstring>textLabel1</cstring>
@@ -60,9 +55,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <spacer>
                     <property name="name">
                         <cstring>spacer1</cstring>
@@ -135,5 +128,9 @@
     <slot>accept()</slot>
     <slot returnType="int">implementMethods( ParsedClass * klass )</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
