--- a/parts/javasupport/javanewclassdlgbase.ui
+++ b/parts/javasupport/javanewclassdlgbase.ui
@@ -22,12 +22,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>6</number>
-        </property>
-        <property name="spacing">
-            <number>3</number>
-        </property>
+
         <widget class="QTabWidget">
             <property name="name">
                 <cstring>class_tabs</cstring>
@@ -71,9 +66,7 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QLabel">
                                 <property name="name">
                                     <cstring>documentation_label_</cstring>
@@ -109,12 +102,7 @@ doxygen or similar tools.</string>
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QLabel">
                                 <property name="name">
                                     <cstring>header_label</cstring>
@@ -245,12 +233,7 @@ Namespace1::Namespace2::...::NamespaceN</string>
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QPushButton" row="2" column="0">
                                 <property name="name">
                                     <cstring>addbaseclass_button</cstring>
@@ -1010,9 +993,7 @@ Namespace1::Namespace2::...::NamespaceN</string>
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <spacer>
                     <property name="name">
                         <cstring>Spacer7_2</cstring>
@@ -1344,7 +1325,11 @@ Namespace1::Namespace2::...::NamespaceN</string>
     <slot access="protected">baseIncludeChanged(const QString&amp;)</slot>
     <slot access="protected">scopeboxActivated(int)</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
     <includehint>klineedit.h</includehint>
     <includehint>klineedit.h</includehint>
