--- a/parts/pascalproject/pascalproject_optionsdlgbase.ui
+++ b/parts/pascalproject/pascalproject_optionsdlgbase.ui
@@ -30,12 +30,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QLabel">
                     <property name="name">
                         <cstring>config_label</cstring>
@@ -464,7 +459,11 @@
     <slot access="protected">setDirty()</slot>
     <slot access="protected">setDefaultOptions()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
     <includehint>qwidget.h</includehint>
     <includehint>kurlrequester.h</includehint>
