--- a/parts/pascalsupport/configproblemreporter.ui
+++ b/parts/pascalsupport/configproblemreporter.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QCheckBox">
             <property name="name">
                 <cstring>bgParserCheckbox</cstring>
@@ -85,12 +80,14 @@
 </connections>
 <includes>
     <include location="local" impldecl="in implementation">configproblemreporter.ui.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <slots>
     <slot>init()</slot>
     <slot>destroy()</slot>
     <slot>accept()</slot>
     <slot>bgParserCheckbox_toggled( bool b )</slot>
 </slots>
-<layoutdefaults spacing="6" margin="11"/>
 </UI>
