--- a/parts/phpsupport/phpconfigparserwidgetbase.ui
+++ b/parts/phpsupport/phpconfigparserwidgetbase.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QGroupBox" row="0" column="0">
             <property name="name">
                 <cstring>GroupBox13</cstring>
@@ -36,12 +31,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QCheckBox" row="1" column="0">
                     <property name="name">
                         <cstring>codeHinting_checkbox</cstring>
@@ -71,12 +61,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QCheckBox" row="0" column="0">
                     <property name="name">
                         <cstring>realtimeParsing_checkbox</cstring>
@@ -122,5 +107,9 @@
         </spacer>
     </grid>
 </widget>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
