--- a/parts/phpsupport/phpconfigwidgetbase.ui
+++ b/parts/phpsupport/phpconfigwidgetbase.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>0</number>
-        </property>
-        <property name="spacing">
-            <number>0</number>
-        </property>
+
         <widget class="QTabWidget" row="0" column="0">
             <property name="name">
                 <cstring>TabWidget1</cstring>
@@ -40,12 +35,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QLabel" row="0" column="0">
                         <property name="name">
                             <cstring>select_label</cstring>
@@ -65,12 +55,7 @@
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QRadioButton" row="0" column="0">
                                 <property name="name">
                                     <cstring>callPHPDirectly_radio</cstring>
@@ -175,12 +160,7 @@ the internal web browser. Please make sure that the webserver was compiled with 
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QLabel" row="0" column="0">
                         <property name="name">
                             <cstring>TextLabel1_2</cstring>
@@ -205,12 +185,7 @@ the internal web browser. Please make sure that the webserver was compiled with 
                             <property name="name">
                                 <cstring>unnamed</cstring>
                             </property>
-                            <property name="margin">
-                                <number>11</number>
-                            </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QRadioButton" row="1" column="0">
                                 <property name="name">
                                     <cstring>useDefaultFile_radio</cstring>
@@ -270,12 +245,7 @@ the internal web browser. Please make sure that the webserver was compiled with 
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QLayoutWidget" row="0" column="0">
                         <property name="name">
                             <cstring>Layout5</cstring>
@@ -287,9 +257,7 @@ the internal web browser. Please make sure that the webserver was compiled with 
                             <property name="margin">
                                 <number>0</number>
                             </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <widget class="QLineEdit" row="1" column="0">
                                 <property name="name">
                                     <cstring>exe_edit</cstring>
@@ -460,5 +428,9 @@ the internal web browser. Please make sure that the webserver was compiled with 
     <slot>slotPHPIniButtonClicked()</slot>
     <slot>slotZendButtonClicked()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
