--- a/parts/phpsupport/phpinfodlg.ui
+++ b/parts/phpsupport/phpinfodlg.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QMultiLineEdit" row="0" column="0" rowspan="1" colspan="3">
             <property name="name">
                 <cstring>php_edit</cstring>
@@ -70,5 +65,9 @@
         <slot>accept()</slot>
     </connection>
 </connections>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
