--- a/parts/phpsupport/phpnewclassdlgbase.ui
+++ b/parts/phpsupport/phpnewclassdlgbase.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QLabel" row="0" column="0">
             <property name="name">
                 <cstring>TextLabel1</cstring>
@@ -171,8 +166,10 @@ class CLASSNAME extends BASECLASS {
 </connections>
 <includes>
     <include location="global" impldecl="in declaration">klineedit.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
     <includehint>klineedit.h</includehint>
 </includehints>
