--- a/parts/qeditor/generalconfigpage.ui
+++ b/parts/qeditor/generalconfigpage.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QLayoutWidget" row="0" column="0">
             <property name="name">
                 <cstring>Layout3</cstring>
@@ -36,9 +31,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QCheckBox">
                     <property name="name">
                         <cstring>checkWordWrap</cstring>
@@ -109,7 +102,11 @@
 </connections>
 <includes>
     <include location="local" impldecl="in implementation">generalconfigpage.ui.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+
 <forwards>
     <forward>class QEditorPart;</forward>
 </forwards>
@@ -122,5 +119,4 @@
     <slot>setPart( QEditorPart * p )</slot>
     <slot>accept()</slot>
 </slots>
-<layoutdefaults spacing="6" margin="11"/>
 </UI>
