--- a/parts/qeditor/highlightingconfigpage.ui
+++ b/parts/qeditor/highlightingconfigpage.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QListBox" row="1" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>listElements</cstring>
@@ -41,10 +36,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
-                <widget class="QCheckBox" row="2" column="0" rowspan="1" colspan="2">
+                                <widget class="QCheckBox" row="2" column="0" rowspan="1" colspan="2">
                     <property name="name">
                         <cstring>checkBold</cstring>
                     </property>
@@ -210,7 +202,11 @@
     <include location="global" impldecl="in implementation">kfontcombo.h</include> 
     <include location="global" impldecl="in implementation">kcolorbutton.h</include>
     <include location="local" impldecl="in implementation">highlightingconfigpage.ui.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+
 <forwards>
     <forward>class QEditorPart;</forward>
 </forwards>
@@ -226,5 +222,4 @@
     <slot>slotUpdatePreview()</slot>
     <slot>slotSelectionChanged()</slot>
 </slots>
-<layoutdefaults spacing="6" margin="11"/>
 </UI>
