--- a/parts/qeditor/indentconfigpage.ui
+++ b/parts/qeditor/indentconfigpage.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QLayoutWidget" row="0" column="0">
             <property name="name">
                 <cstring>Layout1</cstring>
@@ -36,9 +31,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QSpinBox" row="3" column="1">
                     <property name="name">
                         <cstring>spinCommentOffset</cstring>
@@ -123,7 +116,11 @@
     <include location="global" impldecl="in declaration">qvariant.h</include>
     <include location="global" impldecl="in declaration">qmap.h</include>
     <include location="local" impldecl="in implementation">indentconfigpage.ui.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+
 <forwards>
     <forward>class QEditorPart;</forward>
 </forwards>
@@ -137,5 +134,4 @@
     <slot>setPart( QEditorPart * p )</slot>
     <slot>accept()</slot>
 </slots>
-<layoutdefaults spacing="6" margin="11"/>
 </UI>
