--- a/parts/regexptest/regexptestdlgbase.ui
+++ b/parts/regexptest/regexptestdlgbase.ui
@@ -22,12 +22,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QLabel" row="0" column="0">
             <property name="name">
                 <cstring>pattern_label</cstring>
@@ -154,9 +149,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QPushButton">
                     <property name="name">
                         <cstring>insertbutton</cstring>
@@ -220,12 +213,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QRadioButton">
                     <property name="name">
                         <cstring>basicposix_button</cstring>
@@ -352,5 +340,9 @@
     <slot>somethingChanged()</slot>
     <slot access="protected">showRegExpEditor()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
