--- a/parts/replace/replacedlg.ui
+++ b/parts/replace/replacedlg.ui
@@ -359,7 +359,11 @@
     <tabstop>strings_regexp_radio</tabstop>
     <tabstop>files_path_radio</tabstop>
 </tabstops>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
     <includehint>kcombobox.h</includehint>
     <includehint>klineedit.h</includehint>
