--- a/parts/rubysupport/rubyconfigwidgetbase.ui
+++ b/parts/rubysupport/rubyconfigwidgetbase.ui
@@ -45,7 +45,11 @@
         </property>
     </widget>
 </widget>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
     <includehint>qwidget.h</includehint>
 </includehints>
