--- a/parts/svn/svnoptions.ui
+++ b/parts/svn/svnoptions.ui
@@ -64,5 +64,9 @@
         </property>
     </widget>
 </widget>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
