--- a/parts/tools/addtooldlg.ui
+++ b/parts/tools/addtooldlg.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QLabel" row="3" column="0">
             <property name="name">
                 <cstring>cmdlineLabel_2</cstring>
@@ -92,9 +87,7 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <spacer>
                     <property name="name">
                         <cstring>Spacer4</cstring>
@@ -196,7 +189,10 @@
 </tabstops>
 <includes>
     <include location="local" impldecl="in implementation">addtooldlg.ui.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <forwards>
     <forward>class QListViewItem;</forward>
 </forwards>
@@ -205,7 +201,6 @@
     <slot returnType="QString">getApp()</slot>
     <slot access="private">treeSelectionChanged( QListViewItem * lvi )</slot>
 </slots>
-<layoutdefaults spacing="6" margin="11"/>
 <includehints>
     <includehint>kurlrequester.h</includehint>
     <includehint>klineedit.h</includehint>
