--- a/parts/tools/toolsconfigwidgetbase.ui
+++ b/parts/tools/toolsconfigwidgetbase.ui
@@ -40,12 +40,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QListBox" row="0" column="0">
                         <property name="name">
                             <cstring>toolsmenuBox</cstring>
@@ -62,9 +57,7 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <spacer>
                                 <property name="name">
                                     <cstring>Spacer9_3</cstring>
@@ -129,12 +122,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QListBox" row="0" column="0">
                         <property name="name">
                             <cstring>filecontextBox</cstring>
@@ -151,9 +139,7 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <spacer>
                                 <property name="name">
                                     <cstring>Spacer9_2</cstring>
@@ -218,12 +204,7 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
+
                     <widget class="QListBox" row="0" column="0">
                         <property name="name">
                             <cstring>dircontextBox</cstring>
@@ -240,9 +221,7 @@
                             <property name="margin">
                                 <number>0</number>
                             </property>
-                            <property name="spacing">
-                                <number>6</number>
-                            </property>
+
                             <spacer>
                                 <property name="name">
                                     <cstring>Spacer9</cstring>
@@ -345,5 +324,9 @@
     <slot access="protected">toolsmenuaddClicked()</slot>
     <slot access="protected">toolsmenuremoveClicked()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
