--- a/parts/trollproject/filepropertybase.ui
+++ b/parts/trollproject/filepropertybase.ui
@@ -27,12 +27,6 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
         <spacer row="2" column="0">
             <property name="name">
                 <cstring>Spacer1</cstring>
@@ -114,5 +108,9 @@
 <slots>
     <slot>updateFileProperties()</slot>
 </slots>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
