--- a/parts/visualboyadvance/vbaconfigwidgetbase.ui
+++ b/parts/visualboyadvance/vbaconfigwidgetbase.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QLineEdit" row="1" column="2" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>binaryEdit</cstring>
@@ -49,12 +44,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QRadioButton">
                     <property name="name">
                         <cstring>normalModeButton</cstring>
@@ -173,12 +163,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QRadioButton">
                     <property name="name">
                         <cstring>scaling1Button</cstring>
@@ -258,5 +243,10 @@
         </spacer>
     </grid>
 </widget>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
+
 </UI>
