--- a/src/settingswidget.ui
+++ b/src/settingswidget.ui
@@ -19,12 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <property name="margin">
-            <number>11</number>
-        </property>
-        <property name="spacing">
-            <number>6</number>
-        </property>
+
         <widget class="QCheckBox" row="0" column="0">
             <property name="name">
                 <cstring>lastProjectCheckbox</cstring>
@@ -61,12 +56,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QLayoutWidget">
                     <property name="name">
                         <cstring>Layout10</cstring>
@@ -78,9 +68,7 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-                        <property name="spacing">
-                            <number>6</number>
-                        </property>
+
                         <widget class="QLabel">
                             <property name="name">
                                 <cstring>buttonLabel_2</cstring>
@@ -132,12 +120,7 @@
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
+
                 <widget class="QLayoutWidget">
                     <property name="name">
                         <cstring>Layout9</cstring>
@@ -149,9 +132,7 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-                        <property name="spacing">
-                            <number>6</number>
-                        </property>
+
                         <widget class="QLabel">
                             <property name="name">
                                 <cstring>buttonLabel</cstring>
@@ -209,9 +190,7 @@
                         <property name="margin">
                             <number>0</number>
                         </property>
-                        <property name="spacing">
-                            <number>6</number>
-                        </property>
+
                         <widget class="QLayoutWidget">
                             <property name="name">
                                 <cstring>Layout6</cstring>
@@ -223,9 +202,7 @@
                                 <property name="margin">
                                     <number>0</number>
                                 </property>
-                                <property name="spacing">
-                                    <number>6</number>
-                                </property>
+
                                 <widget class="QLayoutWidget">
                                     <property name="name">
                                         <cstring>Layout3</cstring>
@@ -237,9 +214,7 @@
                                         <property name="margin">
                                             <number>0</number>
                                         </property>
-                                        <property name="spacing">
-                                            <number>6</number>
-                                        </property>
+
                                         <widget class="QCheckBox">
                                             <property name="name">
                                                 <cstring>lineWrappingCheckBox</cstring>
@@ -288,12 +263,7 @@
                                 <property name="name">
                                     <cstring>unnamed</cstring>
                                 </property>
-                                <property name="margin">
-                                    <number>11</number>
-                                </property>
-                                <property name="spacing">
-                                    <number>6</number>
-                                </property>
+
                                 <widget class="QRadioButton">
                                     <property name="name">
                                         <cstring>veryShortCompilerOutputRadioButton</cstring>
@@ -399,7 +369,10 @@
     <include location="global" impldecl="in declaration">qfont.h</include>
     <include location="global" impldecl="in declaration">qpushbutton.h</include>
     <include location="local" impldecl="in implementation">settingswidget.ui.h</include>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <variables>
     <variable>QFont _messageFont;</variable>
     <variable>QFont _applicationFont;</variable>
@@ -412,7 +385,7 @@
     <slot>setMessageFont( const QFont &amp; fnt )</slot>
     <slot>setApplicationFont( const QFont &amp; fnt )</slot>
 </slots>
-<layoutdefaults spacing="6" margin="11"/>
+
 <includehints>
     <includehint>qwidget.h</includehint>
     <includehint>kurlrequester.h</includehint>
